--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,8 +1,9 @@
 <header class="mat-elevation-z6">
     <div class="content row">
-        <div class="row flex-start">
-            <div class="bear icon"></div>
+        <div class="row header-content">
+            <!-- <div class="bear icon"></div> -->
             <h1>PALABREO</h1>
+            <a mat-raised-button routerLink="/words">All Words</a>
         </div>
     </div>
 </header>
