--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -23,4 +23,8 @@
         height: 36px;
         margin: 0 1rem 0 0;
     }
+
+    header-content {
+        justify-content: space-between;
+    }
 }
