--- a/src/app/components/words/words.component.html
+++ b/src/app/components/words/words.component.html
@@ -1,5 +1,4 @@
-<mat-card>
-    <mat-card-title>All Words</mat-card-title>
+<mat-card class="word-wrapper">
     <mat-card *ngFor="let word of (words$ | async)">
         <a mat-raised-button [routerLink]="['/', 'words', word.id]">{{word.english}}</a>
     </mat-card>
