--- a/src/app/components/words/words.component.scss
+++ b/src/app/components/words/words.component.scss
@@ -1,6 +1,12 @@
 :host {
-    mat-card {
-        display: grid;
-        place-items: center;
+    width: 90%;
+    mat-card.word-wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        width: 90%;
+
+        mat-card {
+            width: auto;
+        }
     }
 }
