--- a/src/styles/material.scss
+++ b/src/styles/material.scss
@@ -1,6 +1,15 @@
 @use '@angular/material' as mat;
 @import 'variables';
-@include mat.core();
+// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
+//  The following line adds:
+//    1. Default typography styles for all components
+//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
+//  If you specify typography styles for the components you use elsewhere, you should delete this line.
+//  If you don't need the default component typographies but still want the hierarchy styles,
+//  you can delete this line and instead use:
+//    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
+@include mat.all-legacy-component-typographies();
+@include mat.legacy-core();
 
 $palabreo-primary: (
   50: $primary-color,
@@ -102,7 +111,7 @@ $palabreo-primary-palette: mat.define-palette($palabreo-primary);
 $palabreo-secondary-palette: mat.define-palette($palabreo-secondary);
 $palabreo-red-palette: mat.define-palette($palabreo-red);
 
-$palabreo-typography: mat.define-typography-config(
+$palabreo-typography: mat.define-legacy-typography-config(
   $font-family: 'Roboto, sans-serif',
 );
 
@@ -153,7 +162,7 @@ $primary-light-theme: (
   ),
 );
 
-@include mat.all-component-themes($primary-light-theme);
-@include mat.all-component-typographies($palabreo-typography);
+@include mat.all-legacy-component-themes($primary-light-theme);
+@include mat.all-legacy-component-typographies($palabreo-typography);
 
 
