chore: remove scss files

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -7,10 +7,10 @@
         </div>
     </div>
 </header>
-<main class="bear col">
+<main style="height: calc(100vh - 170px);" class="bear flex flex-col overflow-y-scroll">
     <router-outlet></router-outlet>
 </main>
-<footer>
+<footer class="w-full">
     <div class="content row">
         <div class="mat-caption">ONIVORO.COM, LLC 2022</div>
     </div>
