--- a/src/app/components/word/word.component.html
+++ b/src/app/components/word/word.component.html
@@ -1,41 +1,43 @@
-<ng-container *ngFor="let word of [word$ | async]">
-    <mat-card>
-        <div class="flag">
-            <app-flag lang="en"></app-flag>
-        </div>
-        <mat-card-title>{{word?.english}}</mat-card-title>
-        <button mat-mini-fab (click)="play(word?.english, 'en-US')">
-            <mat-icon>play_arrow</mat-icon>
-        </button>
-    </mat-card>
+<div class="flex flex-wrap w-[90%] justify-around">
+    <ng-container *ngFor="let word of [word$ | async]">
+        <mat-card class="flex flex-col justify-between items-stretch gap-8">
+            <div class="flag">
+                <app-flag lang="en"></app-flag>
+            </div>
+            <mat-card-title>{{word?.english}}</mat-card-title>
+            <button mat-mini-fab (click)="play(word?.english, 'en-US')">
+                <mat-icon>play_arrow</mat-icon>
+            </button>
+        </mat-card>
 
-    <mat-card *ngIf="word?.spanish">
-        <div class="flag">
-            <app-flag lang="es"></app-flag>
-        </div>
-        <mat-card-title>{{word?.spanish}}</mat-card-title>
-        <button mat-mini-fab (click)="play(word?.spanish, 'es-US')">
-            <mat-icon>play_arrow</mat-icon>
-        </button>
-    </mat-card>
+        <mat-card class="flex flex-col justify-between items-stretch gap-8" *ngIf="word?.spanish">
+            <div class="flag">
+                <app-flag lang="es"></app-flag>
+            </div>
+            <mat-card-title>{{word?.spanish}}</mat-card-title>
+            <button mat-mini-fab (click)="play(word?.spanish, 'es-US')">
+                <mat-icon>play_arrow</mat-icon>
+            </button>
+        </mat-card>
 
-    <mat-card *ngIf="word?.hebrew">
-        <div class="flag">
-            <app-flag lang="he"></app-flag>
-        </div>
-        <mat-card-title>{{word?.hebrew}}</mat-card-title>
-        <button mat-mini-fab (click)="play(word?.hebrew, 'he-IL')">
-            <mat-icon>play_arrow</mat-icon>
-        </button>
-    </mat-card>
+        <mat-card class="flex flex-col justify-between items-stretch gap-8" *ngIf="word?.hebrew">
+            <div class="flag">
+                <app-flag lang="he"></app-flag>
+            </div>
+            <mat-card-title>{{word?.hebrew}}</mat-card-title>
+            <button mat-mini-fab (click)="play(word?.hebrew, 'he-IL')">
+                <mat-icon>play_arrow</mat-icon>
+            </button>
+        </mat-card>
 
-    <mat-card *ngIf="word?.greek">
-        <div class="flag">
-            <app-flag lang="el"></app-flag>
-        </div>
-        <mat-card-title>{{word?.greek}}</mat-card-title>
-        <button mat-mini-fab (click)="play(word?.greek, 'el-GR')">
-            <mat-icon>play_arrow</mat-icon>
-        </button>
-    </mat-card>
-</ng-container>
+        <mat-card class="flex flex-col justify-between items-stretch gap-8" *ngIf="word?.greek">
+            <div class="flag">
+                <app-flag lang="el"></app-flag>
+            </div>
+            <mat-card-title>{{word?.greek}}</mat-card-title>
+            <button mat-mini-fab (click)="play(word?.greek, 'el-GR')">
+                <mat-icon>play_arrow</mat-icon>
+            </button>
+        </mat-card>
+    </ng-container>
+</div>
