chore: theme worx

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -3,7 +3,7 @@
         <div class="row header-content">
             <!-- <div class="bear icon"></div> -->
             <h1>PALABREO</h1>
-            <a mat-raised-button routerLink="/words">All Words</a>
+            <a mat-raised-button color="accent" routerLink="/words">All Words</a>
         </div>
     </div>
 </header>
